# sqlite3

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: main.cpp.F7A237825B8B6F56.idx  sqlite3.c.5D3D1A83DE1C7C41.idx  sqlite3.h.E5B071AA1180BC24.idx
